# MonoAgent

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  benchmark.py  benchmark_report_20250821_211347.txt  benchmark_results_20250821_211347.json  dependency_graph.dot  env.example  error_handling.py  example_usage.py  force_update_repos.py  monitoring.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py  split_repo_agent.py  test_config.py  test_graph.dot  update_org_config.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  performance.yml  security-trivy.yml
examples/: README.md  create_demo_monorepo.sh
tests/: __init__.py  test_ai_capabilities.py  test_ai_migration.py  test_analyzer.py  test_basic.py  test_config.py  test_dependency_conflicts.py  test_integration.py  test_providers.py  test_utils.py
